--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.2.6",
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.2.6",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/toast": "^6.1.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/cordova-builders": "^7.0.0",
+    "@material/list": "^14.0.0",
     "cordova-android": "10.1.2",
+    "ionic-material": "^0.4.1",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
